--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import "reset.css";
 @import "variables.css";
-@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@10..48,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,400;12..96,500&display=swap');
 @layer reset,
 variables,
 styles;
@@ -15,6 +15,12 @@ styles;
 
     input:checked~span {
         text-decoration: line-through;
+    }
+
+    input[type=text] {
+        background: var(--bg);
+        border: 1px solid var(--text-p);
+        width: 100%;
     }
 
     input[type=checkbox] {
@@ -71,5 +77,28 @@ styles;
         margin-block: 1rem;
         height: 1px;
         border: 1px solid var(--text-p);
+    }
+
+    .add {
+        display: flex;
+        gap: .5rem;
+    }
+
+    .show {
+        background: var(--bg);
+        color: var(--text-p);
+        border: 1px solid var(--text-p);
+        font-weight: 500;
+        border-radius: .25rem;
+        padding: .25rem .75rem;
+        margin: 0 auto;
+        width: max-content;
+        transition: ease-in-out 100ms;
+    }
+
+    .show:hover {
+        background: var(--text-p);
+        color: var(--bg);
+
     }
 }
